--- a/owncloudApp/src/main/res/values-ro/strings.xml
+++ b/owncloudApp/src/main/res/values-ro/strings.xml
@@ -54,6 +54,9 @@
   <string name="prefs_remember_last_upload_location_summary">Reține locația fișierului încărcat precedent</string>
   <string name="pass_code_locked">Blocat cu cod</string>
   <!--Bottom navigation bar-->
+  <string name="bottom_nav_files">Fișiere</string>
+  <string name="bottom_nav_uploads">Încărcări</string>
+  <string name="bottom_nav_links">Link-uri</string>
   <string name="recommend_subject">Încearcă %1$s pe smartphone-ul tău!</string>
   <string name="recommend_text">Te invit să folosești %1$s pe smartphone-ul tău!\nDescarcă aici: %2$s</string>
   <string name="auth_failure_snackbar">Autentificare nereușită</string>
