--- a/owncloudApp/src/main/res/values-es/strings.xml
+++ b/owncloudApp/src/main/res/values-es/strings.xml
@@ -77,6 +77,10 @@
   <string name="pattern_locked">Bloqueado con patrón</string>
   <string name="illegal_argument_exception_message">Se necesita una ACCIÓN válida</string>
   <!--Bottom navigation bar-->
+  <string name="bottom_nav_files">Archivos</string>
+  <string name="bottom_nav_uploads">Cargas</string>
+  <string name="bottom_nav_offline">Desconectado</string>
+  <string name="bottom_nav_links">Enlaces</string>
   <string name="recommend_subject">¡Prueba  %1$s en su smarthphone!</string>
   <string name="recommend_text">¡Quiero invitarle a usar %1$s en su smartphone!\nDescárguelo aquí: %2$s</string>
   <string name="error_reason">debido a </string>
