--- a/owncloudApp/src/main/res/values-he/strings.xml
+++ b/owncloudApp/src/main/res/values-he/strings.xml
@@ -77,6 +77,10 @@
   <string name="pattern_locked">נעילה על בסיס תבנית</string>
   <string name="illegal_argument_exception_message">פעולה חוקית נדרשת להעברה</string>
   <!--Bottom navigation bar-->
+  <string name="bottom_nav_files">קבצים</string>
+  <string name="bottom_nav_uploads">העלאות</string>
+  <string name="bottom_nav_offline">לא מקוון</string>
+  <string name="bottom_nav_links">קישורים</string>
   <string name="recommend_subject">לבדיקה %1$s בטלפון החכם שלך!</string>
   <string name="recommend_text">הנך מוזמן להשתמש ב- %1$s בטלפון החכם שלך!\nניתן להוריד מכאן: %2$s</string>
   <string name="error_reason">כיוון ש-</string>
