--- a/owncloudApp/src/main/res/values-sl/strings.xml
+++ b/owncloudApp/src/main/res/values-sl/strings.xml
@@ -52,6 +52,9 @@
   <string name="prefs_remember_last_share_location">Zapomni si mesto souporabe</string>
   <string name="prefs_remember_last_upload_location_summary">Zapomni si zadnje mesto za pošiljanje v oblak</string>
   <!--Bottom navigation bar-->
+  <string name="bottom_nav_files">Datoteke</string>
+  <string name="bottom_nav_uploads">Prenosi na strežnik</string>
+  <string name="bottom_nav_links">Povezave</string>
   <string name="recommend_subject">Poskusite z uporabo %1$s na pametnem telefonu!</string>
   <string name="recommend_text">Želim ti predstaviti %1$s na pametnem telefonu!\nPrejmeš ga lahko na: %2$s</string>
   <string name="auth_oauth_failure_snackbar_action">Prijava</string>
