--- a/owncloudApp/src/main/res/values-en-rGB/strings.xml
+++ b/owncloudApp/src/main/res/values-en-rGB/strings.xml
@@ -37,6 +37,7 @@
   <string name="prefs_accounts">Accounts</string>
   <string name="prefs_manage_accounts">Manage accounts</string>
   <string name="prefs_passcode">Passcode lock</string>
+  <string name="prefs_biometric">Biometric lock</string>
   <string name="prefs_biometric_summary">Enable passcode or pattern lock to enable this option</string>
   <string name="prefs_touches_with_other_visible_windows">Touches with other visible windows</string>
   <string name="prefs_touches_with_other_visible_windows_summary">Allow touches when the view is obscured by another visible window. Enable it to use light filtering apps.</string>
@@ -84,6 +85,7 @@
   <string name="recommend_text">I want to invite you to use %1$s on your smartphone!\nDownload here: %2$s</string>
   <string name="error_reason">because</string>
   <string name="auth_failure_snackbar">Authentication failed</string>
+  <string name="server_not_supported">Your server version is lower than 10 so is not supported, please upgrade your server to newer version</string>
   <string name="auth_failure_snackbar_action">Change account</string>
   <string name="auth_oauth_failure">The access token has expired or become invalid. Sign in again to regain access</string>
   <string name="auth_oauth_failure_snackbar_action">Sign in</string>
@@ -228,6 +230,10 @@
   <string name="pass_code_wrong">Incorrect passcode</string>
   <string name="pass_code_removed">Passcode removed</string>
   <string name="pass_code_stored">Passcode stored</string>
+  <string name="biometric_not_hardware_detected">This device doesn\'t support biometric authentication</string>
+  <string name="biometric_not_enrolled">Register at least one biometric to use this feature</string>
+  <string name="biometric_prompt_title">Biometric log in</string>
+  <string name="biometric_prompt_subtitle">Log in using your biometric credential</string>
   <string name="media_notif_ticker">%1$s music player</string>
   <string name="media_state_playing">%1$s (playing)</string>
   <string name="media_state_loading">%1$s (loading)</string>
@@ -547,4 +553,6 @@
   <string name="welcome_feature_5_text">Play your videos without downloading them</string>
   <string name="no_borwser_installed_alert">No browser installed. Please install a Browser in order to allow a secure login.</string>
   <string name="common_not_found">it was not found</string>
+  <string name="supports_oauth2_error">It was not possible to know if OAuth2 is supported</string>
+  <string name="get_base_url_error">It was not possible to know the server base URL</string>
 </resources>
