--- a/owncloudApp/src/main/res/values-it/strings.xml
+++ b/owncloudApp/src/main/res/values-it/strings.xml
@@ -37,6 +37,7 @@
   <string name="prefs_accounts">Account</string>
   <string name="prefs_manage_accounts">Gestisci account</string>
   <string name="prefs_passcode">Blocco con codice di sicurezza</string>
+  <string name="prefs_biometric">Blocco biometrico</string>
   <string name="prefs_biometric_summary">Abilita il blocco con pasword o la sequenza di blocco per attivare questa opzione.</string>
   <string name="prefs_touches_with_other_visible_windows">Tocca con altre finestre visibili</string>
   <string name="prefs_touches_with_other_visible_windows_summary">Consenti tocchi quando la vista è oscurata da un\'altra finestra visibile. Abilitalo per utilizzare app di filtraggio della luce.</string>
@@ -72,6 +73,8 @@
   <string name="passcode_already_set">I blocchi con sequenza e password non possono essere abilitati allo stesso tempo, disabilita la password prima</string>
   <string name="pattern_no_longer_required">La sequenza non sarà più richiesta</string>
   <string name="pattern_configure_your_pattern_explanation">La sequenza sarà richiesta ogni volta che la app sarà avviata</string>
+  <string name="pass_code_locked">Bloccato con codice</string>
+  <string name="pattern_locked">Bloccato con disegno</string>
   <string name="illegal_argument_exception_message">Una AZIONE valida è necessaria per l\'intenzione di passare a</string>
   <!--Bottom navigation bar-->
   <string name="bottom_nav_files">File</string>
@@ -80,8 +83,11 @@
   <string name="bottom_nav_links">Collegamenti</string>
   <string name="recommend_subject">Prova %1$s sul tuo smartphone!</string>
   <string name="recommend_text">Vorrei invitarti a usare %1$s sul tuo smartphone!\nScarica qui: %2$s</string>
+  <string name="error_reason">perchè</string>
   <string name="auth_failure_snackbar">Autenticazione fallita</string>
+  <string name="server_not_supported">La versione del tuo server è inferiore a 10, quindi non è supportata, aggiorna il tuo server alla versione più recente</string>
   <string name="auth_failure_snackbar_action">Cambia account</string>
+  <string name="auth_oauth_failure">Il token di accesso è scaduto o non è più valido. Accedi di nuovo per riottenere l\'accesso</string>
   <string name="auth_oauth_failure_snackbar_action">Accedi</string>
   <string name="auth_check_server">Controlla il server</string>
   <string name="auth_host_url">Indirizzo server https://...</string>
@@ -106,6 +112,7 @@
   <string name="file_list_seconds_ago">secondi fa</string>
   <string name="file_list_empty">Non c\'è niente qui. Carica qualcosa!</string>
   <string name="file_list_empty_available_offline">Non ci sono file offline disponibili.</string>
+  <string name="file_list_empty_shared_by_links">Nessun file è stato condiviso tramite link.</string>
   <string name="file_list_loading">Caricamento in corso...</string>
   <string name="file_list_no_app_for_file_type">Nessuna applicazione trovata per questo tipo di file</string>
   <string name="local_file_list_empty">Non ci sono file in questa cartella.</string>
@@ -138,6 +145,7 @@
   <string name="common_error">Errore</string>
   <string name="common_loading">Caricamento in corso...</string>
   <string name="common_unknown">sconosciuto</string>
+  <string name="common_error_unknown">Errore sconosciuto</string>
   <string name="common_pending">In corso</string>
   <string name="common_important">Importante</string>
   <string name="about_title">Informazioni</string>
@@ -222,6 +230,10 @@
   <string name="pass_code_wrong">Codice segreto non corretto</string>
   <string name="pass_code_removed">Codice segreto rimosso</string>
   <string name="pass_code_stored">Codice segreto memorizzato</string>
+  <string name="biometric_not_hardware_detected">Questo dispositivo non supporta l\'autenticazione biometrica</string>
+  <string name="biometric_not_enrolled">Registrare almeno un impronta per utilizzare questa funzione</string>
+  <string name="biometric_prompt_title">Accesso biometrico</string>
+  <string name="biometric_prompt_subtitle">Accedi utilizzando le tue credenziali biometriche</string>
   <string name="media_notif_ticker">Lettore musicale %1$s</string>
   <string name="media_state_playing">%1$s (in riproduzione)</string>
   <string name="media_state_loading">%1$s (in caricamento)</string>
@@ -280,6 +292,8 @@
   <string name="confirmation_remove_local">Solo localmente</string>
   <string name="confirmation_remove_account_alert">Vuoi davvero rimuovere l\'account %1$s?</string>
   <string name="confirmation_remove_public_share_title">Rimuovi collegamento</string>
+  <string name="confirmation_remove_private_share_title">Rimuovi la condivisione privata</string>
+  <string name="confirmation_remove_share_message">Vuoi veramente rimuovere la condivisione %1$s ?</string>
   <string name="remove_success_msg">Rimozione effettuata con successo</string>
   <string name="remove_fail_msg">La rimozione non può essere completata</string>
   <string name="rename_dialog_title">Digita un nuovo nome</string>
@@ -350,8 +364,14 @@
   <string name="preview_image_error_unknown_format">Questa immagine non può essere mostrata</string>
   <string name="error__upload__local_file_not_copied">%1$s non può essere copiato nella cartella locale %2$s</string>
   <string name="prefs_camera_picture_upload_path_title">Percorso caricamento immagini</string>
+  <string name="get_shares_error">Non è stato possibile recuperare le condivisioni dal server</string>
+  <string name="get_sharees_error">Non è stato possibile recuperare utenti e gruppi dal server</string>
+  <string name="get_capabilities_error">Non è stato possibile recuperare le funzionalità dal server</string>
   <string name="share_link_no_support_share_api">Spiacenti, la condivisione non è abilitata sul tuo server. Contatta il tuo
 		amministratore.</string>
+  <string name="share_link_file_error">Non è stato possibile condividere questo file o cartella</string>
+  <string name="unshare_link_file_error">Non è stato possibile annullare la condivisione di questo file o cartella</string>
+  <string name="update_link_file_error">Non è stato possibile aggiornare questo file o cartella</string>
   <string name="share_link_password_title">Digita una password</string>
   <string name="share_link_empty_password">Devi digitare una password</string>
   <string name="activity_chooser_send_file_title">Invia</string>
@@ -510,6 +530,7 @@ Il Download del file inizierà automaticamente</string>
   <string name="media_service_notification_channel_description">Visualizza il lettore musicale</string>
   <string name="file_sync_notification_channel_name">Sincronizzazione dei file</string>
   <string name="file_sync_notification_channel_description">Visualizza i risultati della sincronizzazione</string>
+  <string name="clicks_to_be_developer">TU %1$d clicca qui per abilitare il menu da sviluppatore</string>
   <string name="rate_dialog_title">Vota %1$s questa app!</string>
   <string name="rate_dialog_description">Se questa app ti soddisfa, puoi spendere quale istante per votarla ? Il tuo voto è molto importante per noi.</string>
   <string name="button_no_thanks_name">NO, GRAZIE</string>
@@ -532,4 +553,7 @@ Il Download del file inizierà automaticamente</string>
   <string name="welcome_feature_5_title">Flusso video</string>
   <string name="welcome_feature_5_text">Guarda i tuoi filmati senza doverli scaricare</string>
   <string name="no_borwser_installed_alert">Nessun browser installato. Si prega di installarne uno in modo da consentire un accesso sicuro.</string>
+  <string name="common_not_found">non è stato trovato</string>
+  <string name="supports_oauth2_error">Non è stato possibile sapere se OAuth2 è supportato</string>
+  <string name="get_base_url_error">Non è stato possibile conoscere l\'URL di base del server</string>
 </resources>
