--- a/owncloudApp/src/main/res/values-ru/strings.xml
+++ b/owncloudApp/src/main/res/values-ru/strings.xml
@@ -555,4 +555,6 @@
   <string name="welcome_feature_5_text">Проигрывайте ваши ролики, не скачивая их</string>
   <string name="no_borwser_installed_alert">Не установлен никакой браузер. Пожалуйста, установите браузер для поддержки безопасного входа.</string>
   <string name="common_not_found">не найдено</string>
+  <string name="supports_oauth2_error">Невозможно было узнать, поддерживается ли OAuth2</string>
+  <string name="get_base_url_error">Узнать базу сервера, было невозможно</string>
 </resources>
