[tx] updated from transifex

--- a/owncloudApp/src/main/res/values-it/strings.xml
+++ b/owncloudApp/src/main/res/values-it/strings.xml
@@ -552,6 +552,8 @@ Il Download del file inizierà automaticamente</string>
   <string name="welcome_feature_4_text">Le tue foto e video saranno automaticamente inviati al server</string>
   <string name="welcome_feature_5_title">Flusso video</string>
   <string name="welcome_feature_5_text">Guarda i tuoi filmati senza doverli scaricare</string>
+  <string name="welcome_feature_6_title">Si raccomanda una reinstallazione</string>
+  <string name="welcome_feature_6_text">Hai aggiornato da una versione beta. Per favore, reinstalla la app onde evitare comportamenti indesiderati.</string>
   <string name="no_borwser_installed_alert">Nessun browser installato. Si prega di installarne uno in modo da consentire un accesso sicuro.</string>
   <string name="common_not_found">non è stato trovato</string>
   <string name="supports_oauth2_error">Non è stato possibile sapere se OAuth2 è supportato</string>
