--- a/owncloudApp/src/main/res/values-id/strings.xml
+++ b/owncloudApp/src/main/res/values-id/strings.xml
@@ -37,6 +37,7 @@
   <string name="prefs_accounts">Akun</string>
   <string name="prefs_manage_accounts">Kelola akun</string>
   <string name="prefs_passcode">Kunci kode sandi</string>
+  <string name="prefs_biometric">Kunci biometrik</string>
   <string name="prefs_biometric_summary">Aktifkan kode sandi atau kunci pola untuk mengaktifkan opsi ini</string>
   <string name="prefs_touches_with_other_visible_windows">Bersentuhan dengan jendela lainnya</string>
   <string name="prefs_touches_with_other_visible_windows_summary">Perbolehkan sentuhan ketika penglihatan dikaburkan oleh jendela lain yang terlihat. Aktifkanlah untuk menggunakan aplikasi penyaring cahaya.</string>
@@ -72,15 +73,21 @@
   <string name="passcode_already_set">Pola dan kunci kode sandi tidak dapat diaktifkan secara bersamaan, harap nonaktifkan kode sandi terlebih dahulu</string>
   <string name="pattern_no_longer_required">Pola tidak akan ditanyakan lagi</string>
   <string name="pattern_configure_your_pattern_explanation">Pola akan diminta setiap kali aplikasi dimulai</string>
+  <string name="pass_code_locked">Dikunci dengan sandi</string>
+  <string name="pattern_locked">Dikunci dengan pola</string>
   <string name="illegal_argument_exception_message">AKSI yang sah dibutuhkan dalam maksud melewati ke </string>
   <!--Bottom navigation bar-->
   <string name="bottom_nav_files">Berkas</string>
   <string name="bottom_nav_uploads">Unggah</string>
+  <string name="bottom_nav_offline">Putus jaringan</string>
   <string name="bottom_nav_links">Tautan</string>
   <string name="recommend_subject">Cobalah %1$s pada ponsel cerdas Anda!</string>
   <string name="recommend_text">Saya mengajak Anda untuk menggunakan %1$s di ponsel cerdas Anda!\nUnduh gratis disini: %2$s</string>
+  <string name="error_reason">karena</string>
   <string name="auth_failure_snackbar">Otentikasi gagal</string>
+  <string name="server_not_supported">Versi server Anda di bawah 10 sehingga tidak ada dukungan, silakan perbaharui server Anda ke versi terbaru</string>
   <string name="auth_failure_snackbar_action">Ganti akun</string>
+  <string name="auth_oauth_failure">Token akses sudah habis atau tidak sah. Masuk lagi untuk mendapat akses</string>
   <string name="auth_oauth_failure_snackbar_action">Masuk</string>
   <string name="auth_check_server">Periksa peladen</string>
   <string name="auth_host_url">Alamat server https://…</string>
@@ -105,6 +112,7 @@
   <string name="file_list_seconds_ago">beberapa detik yang lalu</string>
   <string name="file_list_empty">Tidak ada apa-apa di sini. Unggah sesuatu!</string>
   <string name="file_list_empty_available_offline">Tidak ada file offline yang tersedia.</string>
+  <string name="file_list_empty_shared_by_links">Tidak ada file yang dibagikan dengan tautan.</string>
   <string name="file_list_loading">Memuat...</string>
   <string name="file_list_no_app_for_file_type">Tidak ditemukan aplikasi untuk membaca berkas</string>
   <string name="local_file_list_empty">Tidak ada satupun berkas dalam folder ini.</string>
@@ -137,6 +145,7 @@
   <string name="common_error">Kesalahan</string>
   <string name="common_loading">Memuat...</string>
   <string name="common_unknown">tidak diketahui</string>
+  <string name="common_error_unknown">Kesalahan tidak diketahui</string>
   <string name="common_pending">Tertunda</string>
   <string name="common_important">Penting</string>
   <string name="about_title">Tentang</string>
@@ -221,6 +230,9 @@
   <string name="pass_code_wrong">Kode sandi salah</string>
   <string name="pass_code_removed">Kode sandi dihapus</string>
   <string name="pass_code_stored">Kode sandi disimpan</string>
+  <string name="biometric_not_hardware_detected">Gawai Anda tidak mendukung otentikasi biometrik</string>
+  <string name="biometric_not_enrolled">Daftar dengan setidaknya satu biometrik untuk menggunakan fitur ini</string>
+  <string name="biometric_prompt_title">Masuk dengan biometrik</string>
   <string name="media_notif_ticker">Pemutar musik %1$s</string>
   <string name="media_state_playing">%1$s (dimainkan)</string>
   <string name="media_state_loading">%1$s (sedang dimuat)</string>
