--- a/owncloudApp/src/main/res/values-sv/strings.xml
+++ b/owncloudApp/src/main/res/values-sv/strings.xml
@@ -1,5 +1,8 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <string name="about_android">\'%1$s\' för Android</string>
+  <string name="about_version">Version \'%1$s\'</string>
+  <string name="actionbar_search">Sök i denna map</string>
   <string name="actionbar_sync">Uppdatera konto</string>
   <string name="actionbar_upload">Ladda upp</string>
   <string name="actionbar_upload_from_apps">Innehåll från andra program</string>
@@ -10,6 +13,7 @@
   <string name="actionbar_see_details">Detaljer</string>
   <string name="actionbar_send_file">Skicka</string>
   <string name="actionbar_sort">Sortera</string>
+  <string name="actionbar_descending">Nedåtgående</string>
   <string name="actionbar_sort_title">Sortera efter</string>
   <string name="actionbar_sort_by_name">A-Ö</string>
   <string name="actionbar_sort_by_date">Äldst - Nyast</string>
@@ -21,8 +25,10 @@
   <string name="drawer_item_uploads_list">Uppladdningar</string>
   <string name="drawer_close">Stäng</string>
   <string name="drawer_open">Öppna</string>
+  <string name="drawer_loading_quota">Laddar kvoten</string>
   <string name="drawer_quota">%1$s av%2$s använt (%3$s %%)</string>
   <string name="drawer_unavailable_free_storage">%1$s används</string>
+  <string name="drawer_unavailable_used_storage">Ingen information om lagringsanvändning tillgänglig</string>
   <string name="drawer_feedback">Feedback</string>
   <string name="drawer_help">Hjälp</string>
   <string name="prefs_category_general">Allmänt</string>
@@ -31,6 +37,8 @@
   <string name="prefs_accounts">Konton</string>
   <string name="prefs_manage_accounts">Hantera konton</string>
   <string name="prefs_passcode">Lösenordslås</string>
+  <string name="prefs_biometric">Biometrisk lås</string>
+  <string name="prefs_biometric_summary">Aktivera lösenord eller mönsterlås för att aktivera det här alternativet</string>
   <string name="prefs_log_title">Aktivera Loggning</string>
   <string name="prefs_log_summary">Används för att logga problem</string>
   <string name="prefs_log_title_history">Logghistorik</string>
