--- a/owncloudApp/src/main/res/values-de/strings.xml
+++ b/owncloudApp/src/main/res/values-de/strings.xml
@@ -551,6 +551,10 @@
   <string name="welcome_feature_4_text">Deine Bilder/Videos werden automatisch hochgeladen</string>
   <string name="welcome_feature_5_title">Videostreaming</string>
   <string name="welcome_feature_5_text">Gib deine Videos wieder, ohne sie herunterzuladen</string>
+  <string name="welcome_feature_6_title">Neue untere Navigationsleiste</string>
+  <string name="welcome_feature_6_text">Leichterer und schnellerer Zugriff auf deine verfügbaren Offline-Dateien und Links</string>
+  <string name="welcome_feature_7_title">Unterstützung für OpenID-Connect</string>
+  <string name="welcome_feature_7_text">Verbinde dich mit OpenID-Connect auf sicherere Weise mit deinem ownCloud-Servern</string>
   <string name="no_borwser_installed_alert">Es ist kein Browser installiert. Bitte installiere zur sicheren Anmeldung einen Browser.</string>
   <string name="common_not_found">nichts gefunden</string>
   <string name="supports_oauth2_error">Es war nicht möglich herauszufinden, ob OAuth2 unterstützt wird.</string>
